--- a/homeproject/Woo.zoo/html/CSS/responsive_index.css
+++ b/homeproject/Woo.zoo/html/CSS/responsive_index.css
@@ -1,92 +1,251 @@
-@media screen and (max-width:489px)
+@media screen and (max-width:500px)
 {
-  nav {z-index:10;position: fixed; right:10px; top:20px; display: block; }
-  nav a.menu{display:block; background-color:rgba(100,100,100,.5);height:55px; width:100px;
-              line-height:55px; text-align: center;text-decoration: none; color:white;}
-  nav  ul{ width:200px; position:absolute; display: none;}
-  nav  ul li{float:none;  height:55px; line-height: 55px;}
-  nav  ul li a{transition: .1s; border-left:0px solid gray; }
-  nav  ul li a:hover{ border-top: 0;
-                      border-left: 5px #f4c22d solid;}
+  nav {
+    position: fixed;z-index:10; right:10px; top:20px;
+    display: block;
+  }
+  nav a.menu{
+    height:55px; width:100px;
+    display:block;
+    background-color:rgba(100,100,100,.5);
+    line-height:55px; text-align: center; text-decoration: none;
+    color:white;
+  }
+  nav  ul{
+    position:absolute;
+    width:200px; display: none;
+  }
+  nav  ul li{
+    height:55px;
+    float:none; line-height: 55px;
+  }
+  nav  ul li a{
+    transition: .1s;
+    border-left:0px solid gray;
+  }
+  nav  ul li a:hover{
+    border-top: 0;border-left: 5px #f4c22d solid;
+  }
   /*nav .menu ul li a &:hover{border-top:0; border-left:5px solid gray;}*/
   article div[class^="section"]{display:block; }
   /*'section'들어간 class 모두 선택*/
   /*section 1 */
-  article .section1{margin:0 0; padding-top:20px;width:100%; height:480px; overflow: hidden;}
-  article .section1 .section1-log{margin:170px 50px; text-align: center;
-                                  width: 100px; height:80px;background-color: rgba(255,255,255,.7)}
-  article .section1 .section1-log h2 a{text-decoration: none;color:black; font-size: 18px; font-family: dottum;}
-  article .section1 .section1-log p{line-height: 20px; font-size: 12px; font-family: dottum;}
-  article .section1 .section1-bg-bgi{position: absolute; top:0; z-index: -1;width:100%; height:500px;
-                                   background-image: url(http://i.imgur.com/gI771Mu.jpg);
-                                   background-repeat:no-repeat;-webkit-background-size:cover;}
+  article .section1{
+    margin:0 0; padding-top:20px;
+    width:100%; height:480px;
+    overflow: hidden;
+  }
+  article .section1 .section1-log{
+    width: 100px; height:80px;
+    margin:170px 50px;
+    text-align: center;
+    background-color: rgba(255,255,255,.7)
+  }
+  article .section1 .section1-log h2 a{
+    text-decoration: none;
+    color:black; font-size: 18px; font-family: dottum;
+  }
+  article .section1 .section1-log p{
+    line-height: 20px;
+    font-size: 12px; font-family: dottum;
+  }
+  article .section1 .section1-bg-bgi{
+    position: absolute; top:0; z-index: -1;
+    width:100%; height:500px;
+    background-image: url(http://i.imgur.com/gI771Mu.jpg);
+    background-repeat:no-repeat;-webkit-background-size:cover;
+  }
   /*이미지 바꾸기 webkit-background-size:cover;은 반응형에서 쓰자*/
-  article .section1 .section1-bg-overlay{outline: 1px solid tomato;}
+  article .section1 .section1-bg-overlay{
+    outline: 1px solid tomato;
+  }
   /*이미지에 오버레이할 일러스트*/
   /*section 2  About me*/
-  article .section2{ width:100%; height:450px;outline: 0 ;}
-  article .section2 .section2-logo{margin:0 auto; text-align: center;
-                                  width: 200px; height:100px; }
-  article .section2 .section2-logo h2 a{text-decoration: none;line-height: 60px;
-                                       color:black; font-size: 18px; font-family: dottum;}
-  article .section2 .section2-logo span{font-size: 12px; line-height: 20px; font-family: dottum;}
-  article .section2 .section2-personal{margin-left:20px; margin-top: 20px;vertical-align: middle;
-                                       display: inline-block; outline: 0 ;
-                                       width:20%; height:380px; }
-  article .section2 .section2-personal table{width:250px; height:150px;
-                                             text-align: left; line-height: 1.5;
-                                             border-left: 3px solid gray;}
-  article .section2 .section2-personal table td{padding-left: 20px; vertical-align:middle; border-bottom: 1px solid gray;}
-  article .section2 .section2-personal table th{vertical-align:middle; border-bottom: 1px solid gray;}
-  article .section2 .section2-image{float:right; margin-top:50px;display: inline-block;background-color: powderblue;
-                                    width: 60%; height: 300px; }
-  article .section2 .section2-more{width:100px; height:30px;position: relative;top:-90px;right:-160px;
-                                   background-color:powderblue;text-align:center;border-top:3px solid #55d}
-  article .section2 .section2-more a{text-decoration: none;font-size:14px;color:#499;font-weight: bold;text-shadow:1px 1px #fff;line-height:28px;}
+  article .section2{
+    width:100%; height:450px;
+    outline: 0 ;
+  }
+  article .section2 .section2-logo{
+    margin:0 auto;
+    text-align: center;
+    width: 200px; height:100px;
+  }
+  article .section2 .section2-logo h2 a{
+    text-decoration: none; line-height: 60px;
+    color:black; font-size: 18px; font-family: dottum;
+  }
+  article .section2 .section2-logo span{
+    line-height: 20px;
+    font-size: 12px;font-family: dottum;
+  }
+  article .section2 .section2-personal{
+    margin-left:20px; margin-top: 20px;
+    vertical-align: middle;
+    display: inline-block; outline: 0 ;
+    width:20%; height:380px;
+  }
+  article .section2 .section2-personal table{
+    width:250px; height:150px;
+    text-align: left; line-height: 1.5;
+    border-left: 3px solid gray;
+  }
+  article .section2 .section2-personal table td{
+    padding-left: 20px; vertical-align:middle;
+    border-bottom: 1px solid gray;
+  }
+  article .section2 .section2-personal table th{
+    vertical-align:middle;
+    border-bottom: 1px solid gray;
+  }
+  article .section2 .section2-image{
+    width: 60%; height: 300px;
+    float:right; margin-top:50px;
+    display: inline-block;
+    background-color: powderblue;
+   }
+  article .section2 .section2-more{
+    position: relative;top:-90px;right:-160px;
+    width:100px; height:30px;
+    text-align:center;
+    border-top:3px solid #55d;
+    background-color:powderblue;
+  }
+  article .section2 .section2-more a{
+    text-decoration:none;text-shadow:1px 1px #fff;line-height:28px;
+    font-size:14px;color:#499;font-weight: bold;
+  }
 
   /*여니 이미지 2넣기*/
   /*section 3 -문구 샵입-*/
-  article .section3{margin-top:10px; width:100%; height:80px; outline: 0 ;}
-  article .section3 p{text-align:center;margin:0 auto;background-color:gray; color:white;font-size: 18px; text-align: center;line-height:80px; font-weight:600;}
+  article .section3{
+    margin-top:10px;
+    width:100%; height:80px;
+    outline: 0 ;
+  }
+  article .section3 p{
+    text-align:center; line-height:80px;
+    margin:0 auto;background-color:gray;
+    color:white;font-size: 18px; font-weight:600;
+  }
 
   /* section 4 -SKILLS-*/
-  article .section4{width:100%; height:450px;}
-  article .section4 .section4-logo{margin:0 auto; text-align: center;width: 200px; height:100px;}
-  article .section4 .section4-logo h2 a{text-decoration: none; line-height: 60px;
-                                       color:black; font-size: 18px; font-family: dottum;}
-  article .section4 .section4-logo p{ font-size: 18px; font-family: dottum; font-size: 14px;}
+  article .section4{
+    width:100%; height:450px;
+  }
+  article .section4 .section4-logo{
+    margin:0 auto;
+    width: 200px; height:100px;
+    text-align: center;
+  }
+  article .section4 .section4-logo h2 a{
+    text-decoration: none; line-height: 60px;
+    color:black; font-size: 18px; font-family: dottum;
+  }
+  article .section4 .section4-logo p{
+    font-size: 18px; font-family: dottum; font-size: 14px;
+  }
   /* grid-list */
-  article .section4 .section4-skills{margin:0 auto;width:300px; height:600px; }
-  article .section4 .section4-skills ul{list-style: none; margin:10px 10px;width:290px;height:340px;background-color:#ccc;}
-  article .section4 .section4-skills li{display: inline-block;
-                                        width:120px;height:80px; margin:10px 10px; }
-  article .section4 .section4-skills li p{display: inline-block;width:100%; height:40px;background-color:gray;
-                                          color:white; font-weight: 300; text-align: center; text-shadow:2px 2px black;
-                                           line-height: 40px;}
-  article .section4 .section4-skills li span{display: block;background-color:rgba(255,255,255,.1);}
-  article .section4 .section4-more{width:100px; height:40px; float:right;position:relative;top:-55px;right:-35px;
-                               background-color:rgba(255,200,200,.8);text-align: center;border-radius:10px 10px;border-top:3px solid tomato}
-  article .section4 .section4-more a{text-decoration: none;font-size:14px;line-height:28px;color:#fff;font-weight: bold;text-shadow:1px 1px #777;}
+  article .section4 .section4-skills{
+    margin:0 auto;
+    width:300px; height:600px;
+  }
+  article .section4 .section4-skills ul{
+    margin:10px 10px;
+    width:290px;height:340px;
+    list-style: none;
+    background-color:#ccc;
+  }
+  article .section4 .section4-skills li{
+    margin:10px 10px;
+    width:120px;height:80px;
+    display: inline-block;
+  }
+  article .section4 .section4-skills li p{
+    width:100%; height:40px;
+    display: inline-block;
+    text-align: center; line-height: 40px;
+    text-shadow:2px 2px black;
+    color:white; font-weight: 300;
+    background-color:gray;
+  }
+  article .section4 .section4-skills li span{
+    display: block;
+    background-color:rgba(255,255,255,.1);
+  }
+  article .section4 .section4-more{
+    position:relative;top:-55px;right:-35px;
+    width:100px; height:40px;
+    float:right;
+    background-color:rgba(255,200,200,.8);
+    text-align: center;
+    border-radius:10px 10px; border-top:3px solid tomato
+  }
+  article .section4 .section4-more a{
+    text-decoration: none;line-height:28px;text-shadow:1px 1px #777;
+    font-size:14px;color:#fff;font-weight: bold;
+  }
   /*section 5 포트폴리오*/
-  article .section5{width:100%; height:1200px;}
-  article .section5 .section5-logo{margin:0 auto; text-align: center;width: 200px; height:100px;}
-  article .section5 .section5-logo h2 a{text-decoration: none; line-height: 60px;
-                                       color:black; font-size: 18px; font-family: dottum;}
-  article .section5 .section5-logo span{font-size: 14px;font-family: dottum;}
-  article .section5 .section5-images{ position:static;display:inline-block; margin-left:60px;width:300px; height:600px;}
-  article .section5 .section5-images ul{position:static;list-style:none; display: inline-block;}
-  article .section5 .section5-images ul li.i1{ margin-top:10px;display: block; width:300px; height:200px; background-color:#ccc;
-                                            position: relative; left:0;top:0; background-color: powderblue;}
-  article .section5 .section5-images ul li.i2{ margin-top:10px;display: block; width:300px; height:200px; background-color:#ccc;
-                                             outline: 1px solid #ccc;position: relative; left:0;top:-10px; background-color: powderblue;}
-article .section5 .section5-more{width:100px; height:40px; float:right;position:relative;z-index:1;top:165px;right:15px;
-                                background-color:rgba(50,200,150,.8);text-align: center;border-top:3px solid black}
-article .section5 .section5-more a{text-decoration: none;font-size:14px;line-height:28px;color:gray;font-weight: bold;text-shadow:1px 1px #fff;}
-
-  footer{background-color: black;}
-
-  footer div{text-align: center;}
-  footer div span{color:white;}
+  article .section5{
+    width:100%; height:1200px;
+  }
+  article .section5 .section5-logo{
+    margin:0 auto;
+    text-align: center;
+    width: 200px; height:100px;
+  }
+  article .section5 .section5-logo h2 a{
+    text-decoration: none; line-height: 60px;
+    color:black; font-size: 18px; font-family: dottum;
+  }
+  article .section5 .section5-logo span{
+    font-size: 14px;font-family: dottum;
+  }
+  article .section5 .section5-images{
+    position:static;
+    margin-left:60px;
+    width:300px; height:600px;
+    display:inline-block;
+  }
+  article .section5 .section5-images ul{
+    position:static;
+    list-style:none; display: inline-block;
+  }
+  article .section5 .section5-images ul li.i1{
+    position: relative; left:0;top:0;
+    margin-top:10px;
+    display: block;
+    width:300px; height:200px;
+    background-color: powderblue;
+  }
+  article .section5 .section5-images ul li.i2{
+    position: relative; left:0;top:-10px;
+    margin-top:10px;
+    width:300px; height:200px;
+    display: block;
+    outline: 1px solid #ccc;
+    background-color: powderblue;
+  }
+  article .section5 .section5-more{
+    position:relative;z-index:1;top:165px;right:15px;
+    width:100px; height:40px;
+    float:right;
+    background-color:rgba(50,200,150,.8);
+    text-align: center;
+    border-top:3px solid black
+   }
+  article .section5 .section5-more a{
+    text-decoration:none; line-height:28px;text-shadow:1px 1px #fff;
+    font-size:14px; color:gray; font-weight: bold;
+  }
+  footer{
+    background-color: black;
+  }
+  footer div{
+    text-align: center;
+  }
+  footer div span{
+    color:white;
+  }
   /*반응형*/
   /* -1.위치 (position& margin& padding& outline)
      -2.크기&속성(width& height& inline-block..)
