--- a/homeproject/Woo.zoo/html/CSS/style.css
+++ b/homeproject/Woo.zoo/html/CSS/style.css
@@ -131,10 +131,11 @@ article .section2 .section2-more a{
 article .section3{
   margin:20px 0;
   width:100%; height:80px;
+  text-align: center;
   background-color:rgba(10,30,30,.5)
 }
 article .section3 p{
-  font-size: 30px; text-align: center;line-height:80px;
+  font-size: 30px; line-height:80px;
 }
 /* section 4 -SKILLS-*/
 article .section4{
