--- a/homeproject/Woo.zoo/html/CSS/responsive_index.css
+++ b/homeproject/Woo.zoo/html/CSS/responsive_index.css
@@ -1,14 +1,52 @@
-@media screen and (max-width:768px) and (min-width:560px)screen\0 and (min-width:560px), screen\9
+@media screen and (max-width:500px)
 {
+  body{
+    max-width: 400px;
+  }
+  header{
+    position: fixed; top:0;
+    width:100%;
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+  header ul{
+    list-style: none;
+  }
+  header ul li{
+    display:inline-block;
+    *zoom:1;
+  }
+  header ul li{
+
+  }
+  header ul li:hover{
+    height:40px;
+    transition: .5s;
+    background-color: rgba(255,255,255,0.8);
+    border-bottom:8px solid green;
+    color:#0a3;
+  }
+  header ul li a{
+    text-decoration: none;
+    text-align: center;
+    width:75px;  height:40px;
+    display:block;
+    line-height: 40px;
+    color:white; font-weight: bold;
+  }
+  header ul li a:hover{
+    color:#1a3;
+  }
+
   nav {
-    position: fixed;z-index:10; right:10px; top:20px;
+    position: fixed;z-index:10; right:10px; top:45px;
     display: block;
   }
   nav a.menu{
-    height:55px; width:100px;
+    height:35px; width:100px;
     display:block;
-    background-color:rgba(100,100,100,.5);
-    line-height:55px; text-align: center; text-decoration: none;
+    background-color:rgba(10,100,50,.5);
+    border:1px solid #173;
+    line-height:35px; text-align: center; text-decoration: none;
     color:white;
   }
   nav  ul{
@@ -46,7 +84,7 @@
     color:black; font-size: 18px; font-family: dottum;
   }
   article .section1 .section1-log p{
-    line-height: 20px;
+    line-height: 10px;
     font-size: 12px; font-family: dottum;
   }
   article .section1 .section1-bg-bgi{
@@ -62,6 +100,7 @@
   /*이미지에 오버레이할 일러스트*/
   /*section 2  About me*/
   article .section2{
+    overflow: hidden;
     width:100%; height:450px;
     outline: 0 ;
   }
@@ -99,12 +138,13 @@
   }
   article .section2 .section2-image{
     width: 60%; height: 300px;
-    float:right; margin-top:50px;
+    float:right;
+    margin-top:50px;
     display: inline-block;
     background-color: powderblue;
    }
   article .section2 .section2-more{
-    position: relative;top:-90px;right:-160px;
+    /*position: relative;top:-90px;right:-160px;*/
     width:100px; height:30px;
     text-align:center;
     border-top:3px solid #55d;
@@ -118,31 +158,33 @@
   /*여니 이미지 2넣기*/
   /*section 3 -문구 샵입-*/
   article .section3{
-    margin:10px 0;
-    width:400px; height:80px;
+    overflow: hidden;
+    margin:10px auto;
+    width:100%; height:80px;
     outline: 0 ;
   }
-  article .section3 p{
-    display: block;
-    width: 100px;
-    line-height:80px;
-    margin:100px auto;background-color:gray;
-    color:white;font-size: 18px; font-weight:600;
+  article .section3 span{
+    margin:0 auto;
+    background-color:gray;
+    color:white;font-size: 18px;
+    font-weight:600;line-height: 80px;
   }
 
   /* section 4 -SKILLS-*/
   article .section4{
     width:100%; height:450px;
+    overflow: hidden;
   }
   article .section4 .section4-logo{
     margin:0 auto;
     width: 200px; height:100px;
     text-align: center;
+
   }
   article .section4 .section4-logo h2 a{
     text-decoration: none; line-height: 60px;
     color:black; font-size: 18px; font-family: dottum;
-  }
+      }
   article .section4 .section4-logo p{
     font-size: 18px; font-family: dottum; font-size: 14px;
   }
@@ -171,13 +213,13 @@
     background-color:gray;
   }
   article .section4 .section4-skills li span{
-    display: block;
+    /*display: block;*/
     background-color:rgba(255,255,255,.1);
   }
   article .section4 .section4-more{
     position:relative;top:-55px;right:-35px;
     width:100px; height:40px;
-    float:right;
+    /*float:right;*/
     background-color:rgba(255,200,200,.8);
     text-align: center;
     border-radius:10px 10px; border-top:3px solid tomato
@@ -188,9 +230,10 @@
   }
   /*section 5 포트폴리오*/
   article .section5{
-    width:100%; height:1200px;
+    width:100%; height:1250px;
   }
   article .section5 .section5-logo{
+    position: relative;
     margin:0 auto;
     text-align: center;
     width: 200px; height:100px;
@@ -204,33 +247,50 @@
   }
   article .section5 .section5-images{
     position:static;
-    margin-left:60px;
+    margin:0 auto;
     width:300px; height:600px;
     display:inline-block;
   }
   article .section5 .section5-images ul{
-    position:static;
+    margin-left:20px; margin: 0 auto
     list-style:none; display: inline-block;
   }
   article .section5 .section5-images ul li.i1{
-    position: relative; left:0;top:0;
+    position:relative;
     margin-top:10px;
-    display: block;
+    display:list-item;
     width:300px; height:200px;
     background-color: powderblue;
   }
+  article .section5 .section5-images ul li.i1 img{
+    width: 300px; height:200px;
+    overflow: hidden;
+  }
+  article .section5 .section5-images ul li.i1 a{
+    width: 300px; height:200px;
+  }
+
   article .section5 .section5-images ul li.i2{
     position: relative; left:0;top:-10px;
     margin-top:10px;
     width:300px; height:200px;
-    display: block;
+    display:list-item;
     outline: 1px solid #ccc;
     background-color: powderblue;
   }
+  article .section5 .section5-images ul li.i2 img{
+    width: 300px; height:200px;
+    overflow: hidden;
+  }
+  article .section5 .section5-images ul li.i2 a{
+    width: 300px; height:200px;
+  }
+
+
   article .section5 .section5-more{
-    position:relative;z-index:1;top:165px;right:15px;
+    position: static;
+    display: inline-block;
     width:100px; height:40px;
-    float:right;
     background-color:rgba(50,200,150,.8);
     text-align: center;
     border-top:3px solid black
