--- a/lgchamical/css/common.css
+++ b/lgchamical/css/common.css
@@ -20,7 +20,7 @@ time, mark, audio, video {
   text-decoration: none;
 	vertical-align: baseline;
   color:#373737;
-	font-family: 'BBNR','맑은 고딕', HelveticaNeue, DroidSans, Sans-serif, Helveticastyle.css?ver=120614:20
+	font-family: '맑은 고딕','Malgun Gothic',sans-serifcommon.css:6
 }
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
