--- a/lgchamical/css/import.css
+++ b/lgchamical/css/import.css
@@ -1,31 +1,182 @@
 @import "common.css";
-header {
-  height: 130px;
-  background-color: #000;
-}
-header > a {
+.fl {
   float: left;
-  display: block;
-  width: 100px;
-  height: 60px;
 }
-header > a h1 {
-  color: #fff;
-  font-size: 14px;
-}
-header nav {
-  height: 60px;
+.fr {
   float: right;
 }
-header nav li {
+.pr {
+  position: relative;
+}
+.pa {
+  position: absolute;
+}
+header {
+  padding-top: 14px;
+  height: 46px;
+  background-color: #000;
+}
+header .top-pop-up {
+  display: none;
+}
+header .logo {
+  margin-left: 401px;
   display: inline-block;
 }
-header nav li a {
-  line-height: 60px;
-  color: #fff;
-  font-size: 24px;
+header .logo h1 {
+  font-size: 0;
+  text-indent: -999px;
 }
-header .section-slide-controller {
-  height: 70px;
-  background-color: #aaa;
+header .topSearch {
+  display: inline-block;
+  right: 170px;
+}
+header .topSearch input {
+  display: none;
+}
+header .topSearch label {
+  font-size: 0;
+  text-indent: -999px;
+}
+header .topSearch a {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  margin-top: -5px;
+  background-image: url('../image/search.png');
+  background-position: center;
+  background-repeat: no-repeat;
+}
+header .lang {
+  margin-right: 401px ;
+  display: inline-block;
+}
+header .lang select {
+  font-weight: 600;
+  height: 27px;
+  width: 95px;
+  border: 0;
+  color: #fafafa;
+  font-size: 14px;
+  background-color: #666;
+}
+header .lang select option {
+  line-height: 22px;
+  color: #fff;
+}
+header nav {
+  display: inline-block;
+  margin: 5px 0 10px 0;
+}
+header nav a {
+  font-size: 0;
+  text-indent: -999px;
+}
+#main .bg-slide {
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+#main .bg-slide .bg-slide-btn {
+  position: absolute;
+  top: 830px;
+  left: 900px;
+  z-index: 2;
+  width: 400px;
+  bottom: 300px;
+}
+#main .bg-slide .bg-slide-btn a {
+  width: 40px;
+  height: 30px;
+  font-size: 0;
+  text-indent: -999px;
+  display: inline-block;
+  background-image: url('../image/slide-select.png');
+  background-repeat: no-repeat;
+}
+#main .bg-slide .bg-slide-btn a:first-child {
+  position: relative;
+  right: 400px;
+  background-image: url('../image/slide-pause.png');
+}
+#main .bg-slide .bg-slide-view ul li {
+  display: none;
+}
+#main .bg-slide .bg-slide-view ul li:first-child {
+  display: block;
+}
+#main .hover-ef ul li {
+  display: inline-block;
+  position: relative;
+  top: 300px;
+  left: 400px;
+  padding-left: 100px;
+}
+#main .hover-ef ul li a {
+  z-index: 1;
+  font-size: 0;
+  text-indent: -999px;
+}
+#main .hover-ef ul li a div {
+  transition: 1s;
+  display: none;
+}
+#main .hover-ef ul li a div img {
+  transition: 1s;
+}
+#main .hover-ef ul li a:hover div {
+  position: relative;
+  display: block;
+  left: 950px;
+  top: -300px;
+}
+footer {
+  width: 100%;
+  height: 96px;
+  padding: 0 20%;
+  padding-top: 28px;
+  background-color: #444;
+  bottom: -120px;
+}
+footer ul li {
+  color: #eee;
+  display: inline-block;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 20px;
+  text-shadow: 1px 1px #666;
+}
+footer ul li a {
+  display: inline-block;
+  margin: 10px 10px;
+  padding-right: 22px;
+  line-height: 16px;
+  color: #eee;
+  font-size: 14px;
+  font-weight: 600;
+  border-right: 1px solid #ddd;
+  text-shadow: 1px 1px #666;
+}
+footer div {
+  top: -65px;
+  left: 950px;
+}
+footer div img {
+  vertical-align: middle;
+}
+footer div a {
+  margin-left: 10px;
+  padding-left: 15px;
+  vertical-align: middle;
+  display: inline-block;
+  color: #666;
+  width: 220px;
+  line-height: 38px;
+  background-color: #fafafa;
+  background-image: url('../image/btn-up.gif');
+  background-repeat: no-repeat;
+  background-position: right;
+}
+footer div div {
+  display: none;
 }
