--- a/mirrorballmusic/css/common.css
+++ b/mirrorballmusic/css/common.css
@@ -20,7 +20,8 @@ time, mark, audio, video {
   text-decoration: none;
 	vertical-align: baseline;
   color:#373737;
-	font-family: 'BBNR','맑은 고딕', HelveticaNeue, DroidSans, Sans-serif, Helveticastyle.css?ver=120614:20
+	font-family: "Century Gothic", CenturyGothic, "Noto Sans", NotoSansKR, RixGo, "Nanum Gothic", NanumGothic, dotum, sans-serif
+
 }
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
