--- a/espoir/css/common.css
+++ b/espoir/css/common.css
@@ -20,7 +20,9 @@ time, mark, audio, video {
   text-decoration: none;
 	vertical-align: baseline;
   color:#373737;
-	font-family: 'BBNR','맑은 고딕', HelveticaNeue, DroidSans, Sans-serif, Helveticastyle.css?ver=120614:20
+	font-family: BBNR, "맑은 고딕", HelveticaNeue, DroidSans, sans-serif, Helvetica
+
+
 }
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
