--- a/espoir/less/main.less
+++ b/espoir/less/main.less
@@ -1,30 +1,103 @@
+.pa{position: absolute;}
+.pr{position: relative;}
+.fl{float: left;}
+.fr{float: right;}
+
 header{
-  height:130px;
-  background-color: #000;
-  >a{
-    float: left;
-    display: block;
-    width: 100px;
-    height:60px;
-    h1{
-      color: #fff;
-      font-size: 14px;
-    }
-  }
+  height:60px;
+  background-color:#000;
   nav{
-    height:60px;
-    float: right;
-    li{
-      display: inline-block;
-      a{
-        line-height:60px;
-        color:#fff;
-        font-size:24px;
+    width: 1424px;
+    margin: 0 auto;
+    div{
+      float: left;
+      padding-left:30px;
+      h1{
+        font-size:14px;
+        text-indent:-999px;
+      }
+    }
+    ul{
+      float: right;
+      padding-left:20px;
+      li{
+        display: inline-block;
+        width:100px;
+        text-align: center;
+        a{
+          font-size:18px;
+          font-weight: bold;
+          line-height: 60px;
+          color: #fff;
+          letter-spacing:-1.5px;
+        }
+        div{
+          display: none;
+        }
+      }
+    }
+    .nav-icon{
+      li{
+        a{
+          font-size:0;
+          text-indent:-999px;
+          background-repeat: no-repeat;
+        }
       }
     }
   }
-  .section-slide-controller{
-    height:70px;
-    background-color: #aaa;
+  .bg-grid{
+    width:1423px;
+    height:3000px;
+    margin: 0 auto;
+    top:0;
+    z-index:-1;
+    .col{
+      display: inline-block;
+      width:25%;
+      height:100%;
+      margin-left:-6px;
+      outline:1px solid #ddd;
+    }
   }
+}
+
+#main{
+  width: 1424px;
+  margin:0 auto;
+  .main-controller{}
+  .main-slide{
+    h2{
+      font-size: 0;
+      text-indent:-999px;
+    }
+    background-color:powderblue;
+    margin-left:-8px;
+    height:900px;
+    .main-slide-view{
+      background-color:#fff;
+      height:600px;
+      top:80px;
+      ul{
+        li{
+          display: none;
+          img{
+            width:100%;
+          }
+          &:first-child{
+            display:block;
+          }
+        }
+      }
+    }
+  }
+}
+
+#shop{
+  display: none;
+}
+
+footer{
+  width: 1424px;
+  margin:0 auto;
 }
